skip the ext fields for now - tablebuild